# GE-Core

./: .gitignore  .releaserc.yaml  README.md  README_PYPI.md  pyproject.toml  releaserc.yaml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: develop.yml  master.yml  master.yml.disabled  release.yml
docs/: architecture.rst  conf.py  developers.rst  index.rst
docs/diagrams/: class_diagram.drawio  program_flow.drawio
gecore/: __main__.py
gecore/converters/i3d/: i3d_writer.py
requirements/: development.txt  documentation.txt  production.txt  test.txt
src/gecore/: __init__.py  __main__.py
src/gecore/common/: destination.py  i3d_attributes.py  source.py
src/gecore/conversion/: conversion.py  destination.py  source.py
src/gecore/conversion/i3d/: i3d_destination.py  i3d_source.py
src/gecore/converters/i3d/: i3d_reader.py
src/gecore/xml_handlers/: __init__.py  elemtree_adapter.py  etree_adapter.py  lxml_adapter.py  xml_interface.py
tests/: test_basic.py
tests/i3d/: basic_export_log.txt  test_i3d_import.py
tests/testresources/: basic.i3d
tests/testresources/xml/: writing_test.xml
tests/xml/: test.xml  test_xml_adapters.py  test_xml_readers.py  test_xml_writers.py
