[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39-tests

[gh-actions]
python =
    3.9: py39

[testenv]
changedir =
    {docs,docslocal}: docs

passenv =
    deploy: TWINE_USERNAME
    deploy: TWINE_PASSWORD

deps =
    tests: -r requirements/test.txt
    {docs,docslocal}:  -r requirements/documentation.txt
    deploy: twine

commands =
    tests: pytest {posargs:tests/}
    docslocal: sphinx-autobuild -b dirhtml -d {envtmpdir}/doctrees . {envtmpdir}/html
    docs: sphinx-build -d "{toxworkdir}/docs_doctree" . "{toxworkdir}/docs_out" -b html {posargs}
    deploy: python -m twine upload --repository testpypi "{toxworkdir}/dist/*"
"""