[build-system]
requires = [
    "setuptools>=46.4",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39}-{tests,docs, deploy}
isolated_build = True
skip_missing_interpreters = true

[gh-actions]
python =
    3.8: py38
    3.9: py39

[gh-actions:env]
ACTION =
    test: tests
    doc: docs
    release: deploy

[testenv]
changedir =
    {docs,docslocal}: docs

passenv =
    deploy: TWINE_PASSWORD

setenv =
    deploy: TWINE_USERNAME = __token__

deps =
    tests: -r requirements/test.txt
    {docs,docslocal}:  -r requirements/documentation.txt
    deploy: twine

commands =
    tests: pytest {posargs:tests/}
    docslocal: sphinx-autobuild -b dirhtml -d {envtmpdir}/doctrees . {envtmpdir}/html
    docs: sphinx-build -d "{toxworkdir}/docs_doctree" . "{toxworkdir}/docs_out" -b html {posargs}
    deploy: python -m twine upload "{toxworkdir}/dist/*"
"""