[metadata]
name = ge-core
version = 0.0.1.dev3
author = StjerneIdioten
author_email = stjerneidioten@gmail.com
description = A library for performing all sorts of operations involved in modding for Giants Engine games
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StjerneIdioten/GE-Core
project_urls =
    Bug Tracker = https://github.com/StjerneIdioten/GE-Core/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
install_requires =
    lxml
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
