[metadata]
name = ge-core
version = attr: gecore.__version__
author = StjerneIdioten
author_email = stjerneidioten@gmail.com
description = A library for performing all sorts of operations involved in modding for Giants Engine games
long_description = file: README_PYPI.md
long_description_content_type = text/markdown
url = https://github.com/StjerneIdioten/GE-Core
project_urls =
    Bug Tracker = https://github.com/StjerneIdioten/GE-Core/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
